hphp/test/slow/inout/bad-call-9.php.expectf
Fatal error: You cannot decorate this argument as inout in %s/test/slow/inout/bad-call-9.php on line 6